Styled the nav links to correct contrast issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,8 +8,6 @@
 body {
     font-family: Arial, sans-serif;
     font-size: 16px;
-    color: #000;
-    background-color: #fff;
 }
 
 /* 404 Page Styles */
@@ -45,13 +43,19 @@ body {
     font-weight: bold;
 }
 
-h1,
+h1, 
 h2,
 h3,
 h4,
 h5,
 h6 {
     font-weight: bold;
+    font-family: Arial, sans-serif;   
+}
+
+h1 {
+    margin-top: 5px;
+    color: greenyellow;
 }
 
 a {
@@ -60,9 +64,9 @@ a {
 }
 
 a:hover {
-    color: #666;
+    color: black;
     text-decoration: underline;
-    background-color: #fff;
+    background-color: green;
 }
 
 /* Header styles */
@@ -96,21 +100,13 @@ header nav ul {
 header nav ul li a {
     font-size: 18px;
     padding: 10px;
-    color: 000;
+    color: green;
 }
 
 header nav ul li a.active {
-    background-color: #fff;
-    color: #000;
+    background-color: black;
+    color: green;
 }
-
-/* Header images
-.header-images {
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-    margin-top: 20px;
-} */
 
 header img {
     width: 20%;
@@ -147,6 +143,7 @@ main section h2 {
 
 main section p {
     margin-bottom: 10px;
+    /* color: blue; */
 }
 
 /* Form styles */
